# home-finder

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: homefinder.yml
src/homefinder/: __init__.py  __main__.py  config.py  dedupe.py  filters.py  geo.py  models.py  notify.py  pipeline.py  rentcast.py  routing.py  scoring.py  store.py  streetview.py  util.py
tests/: conftest.py  test_config_and_util.py  test_dedupe.py  test_filters.py  test_geo.py  test_notify.py  test_pipeline.py  test_routing.py  test_scoring.py  test_store.py
