[project]
name = "homefinder"
version = "0.1.0"
description = "Personal home-finder: aggregates for-sale listings, gates by commute time, ranks against personal preferences, pushes matches to Telegram"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "shapely>=2.0",
    "anthropic>=0.110",  # scoring uses output_config structured outputs
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
# libsql ships Windows wheels only for CPython 3.9-3.13; CI (Linux) is fine.
turso = ["libsql>=0.1.11"]

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/homefinder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
